--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "check": "biome check"
     },
     "dependencies": {
+        "@fontsource-variable/dm-sans": "^5.2.6",
+        "@fontsource/bricolage-grotesque": "^5.2.8",
         "@tailwindcss/vite": "^4.0.6",
         "@tanstack/react-devtools": "^0.2.2",
         "@tanstack/react-query": "^5.66.5",
