--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
         "@tanstack/react-router": "^1.130.2",
         "@tanstack/react-router-devtools": "^1.131.5",
         "@tanstack/router-plugin": "^1.121.2",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.542.0",
         "react": "^19.0.0",
+        "react-aria-components": "^1.12.1",
         "react-dom": "^19.0.0",
+        "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.0.6"
     },
     "devDependencies": {
