--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "@fontsource-variable/dm-sans": "^5.2.6",
         "@fontsource/bricolage-grotesque": "^5.2.8",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-popover": "^1.1.15",
         "@tailwindcss/vite": "^4.0.6",
         "@tanstack/react-devtools": "^0.2.2",
         "@tanstack/react-query": "^5.66.5",
@@ -22,13 +24,15 @@
         "@tanstack/react-router": "^1.130.2",
         "@tanstack/react-router-devtools": "^1.131.5",
         "@tanstack/router-plugin": "^1.121.2",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "lucide-react": "^0.542.0",
+        "lucide-react": "^0.544.0",
         "react": "^19.0.0",
-        "react-aria-components": "^1.12.1",
+        "react-aria-components": "^1.12.2",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss": "^4.0.6"
+        "tailwindcss": "^4.0.6",
+        "valibot": "^1.1.0"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
@@ -39,6 +43,7 @@
         "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.3.4",
         "jsdom": "^26.0.0",
+        "tw-animate-css": "^1.3.8",
         "typescript": "^5.7.2",
         "vite": "^6.3.5",
         "vitest": "^3.0.5",
