--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
         "@tanstack/router-plugin": "^1.121.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns-tz": "^3.2.0",
         "lucide-react": "^0.544.0",
         "react": "^19.0.0",
-        "react-aria-components": "^1.12.2",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.0.6",
