--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fontsource/bricolage-grotesque": "^5.2.8",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-select": "^2.2.6",
         "@tailwindcss/vite": "^4.0.6",
         "@tanstack/react-devtools": "^0.2.2",
         "@tanstack/react-query": "^5.66.5",
