--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "typescript": "^5.7.2",
         "vite": "^7.1.9",
         "vitest": "^3.0.5",
-        "web-vitals": "^4.2.4"
+        "web-vitals": "^4.2.4",
+        "wrangler": "^4.42.0"
     }
 }
