update base in vite.config.ts for gh pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
               run: bun run build
               env:
                   VITE_OPENWEATHER_API_KEY: ${{ secrets.VITE_OPENWEATHER_API_KEY }}
+                  NODE_ENV: production
             - name: Setup Pages
               uses: actions/configure-pages@v5
             - name: Upload artifact
